added funtion to make pay in html

--- a/app/templates/auth/purchase-detail.html
+++ b/app/templates/auth/purchase-detail.html
@@ -320,7 +320,7 @@
                                                                             <i class="fa fa-angle-left"></i> Regresar
                                                                         </button>
                                                                         <button title="Regresar a mis compras" class="btn btn-md btn-primary"
-                                                                            ng-click="Purchase.processPaymentCard = true">
+                                                                            ng-click="Purchase.processPaymentCard()">
                                                                             <i class="fa fa-cash"></i> Abonar
                                                                         </button>
                                                                     </div>
