fix design: se agrego precio del producto en las categorias de los productos, se dividieron en responsive los productos en dos columnas, se ajustó el menu para mobil y para escritorio

--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -37,6 +37,13 @@
     color optional
 
 /* header three rows style */
+.mobile-nav 
+  .nav-link
+    padding 0 !important
+  .navbar-collapse
+    .navbar-nav
+      flex-direction column !important  
+
 .one-rows-nav
   .first-row
     background-color #222
