--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -127,6 +127,18 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .temp-product-detail .bg-image-single, .md-dialog-content .bg-image-single 
+    background-size 100%
+    background-position center
+    background-repeat no-repeat
+    height 500px
+
+  .box-simple .box-header .box-bg-img 
+    background-position center
+    background-size 100%
+    height 200px
+    background-repeat no-repeat
+  
   body .content-area-web
     padding-top 120px
   .one-rows-nav .first-row .nav-item
@@ -246,8 +258,8 @@
   /* SLIDER */
   .slider-box
     .slider-img
-      height 300px
-      background-size cover
+      height 100px
+      background-size 100%
     .owl-nav
       display none
   .slider-small
