--- a/app/css/main.css
+++ b/app/css/main.css
@@ -40,6 +40,12 @@ audio:not([controls]),
 .navbar-side-slider li a:nth-child(5) {
   color: #fa6b6b;
 }
+.mobile-nav .nav-link {
+  padding: 0 !important;
+}
+.mobile-nav .navbar-collapse .navbar-nav {
+  flex-direction: column !important;
+}
 .one-rows-nav .first-row {
   background-color: #222;
 }
@@ -2601,6 +2607,19 @@ md-input-container > md-select {
   }
 }
 @media only screen and (max-width: 767px) {
+  .temp-product-detail .bg-image-single,
+  .md-dialog-content .bg-image-single {
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 500px;
+  }
+  .box-simple .box-header .box-bg-img {
+    background-position: center;
+    background-size: 100%;
+    height: 200px;
+    background-repeat: no-repeat;
+  }
   body .content-area-web {
     padding-top: 120px;
   }
@@ -2749,8 +2768,8 @@ md-input-container > md-select {
     display: inline !important;
   }
   .slider-box .slider-img {
-    height: 300px;
-    background-size: cover;
+    height: 100px;
+    background-size: 100%;
   }
   .slider-box .owl-nav {
     display: none;
