--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -40,7 +40,7 @@
                                 </div>
                             </form>
                         </uib-tab>
-                        <uib-tab index="1" heading="Registro de Minoristas">
+                        <uib-tab index="1" heading="Registrarme">
                             <form class="padding" name="registerForm" ng-submit="Access.createAccount()" novalidate>
                                 <md-input-container md-no-float>
                                     <input type="text" ng-model="Access.formData.contactPersonName"
