--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -141,7 +141,7 @@
                                 <div class="col-sm-4">
                                     <h1 class=text-uppercase>{{Product.categoryName}}</h1>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 ">
                                     <md-input-container class="md-block">
                                         <md-select placeholder="Opciones de ordenamiento"
                                                    ng-model="Product.optionSelected"
@@ -161,7 +161,7 @@
                     </div>
                     <div class="container" ng-controller="ShoppingCtrl as Shop">
                         <div class="row">
-                            <div class="col-sm-4" ng-repeat="product in $data">
+                            <div class="col-sm-4 col-6" ng-repeat="product in $data">
                                 <div class="box-simple" ng-if="!Product.isPost">
                                     <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
                                         <div class="box-header">
@@ -171,7 +171,8 @@
                                         <div class="box-container">
                                             <div class="row align-items-center">
                                                 <div class="col-sm-12 text-center">
-                                                    <h3 class="box-title">{{ product.name | limitTo:40}}</h3>
+                                                    <p class="box-title">{{ product.name | limitTo:40}}</p>
+                                                    <p><strong>{{ product.price | currency }}</strong></p>
                                                 </div>
                                             </div>
                                         </div>
