--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,7 +21,7 @@
                 <hr>
             </div>
             <div class="row">
-                <div class="col-sm-3" ng-repeat="product in Home.products">
+                <div class="col-sm-3 col-6" ng-repeat="product in Home.products">
                     <div class="box-simple">
                         <div class="box-header">
                             <a ui-sref="product-detail({slug:product.slug})" title="Ver más">
