--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -188,10 +188,22 @@
     border-bottom 1px solid #ddd
     .box-title
       font-weight bold
-      font-size 12px
-    p
-      height 50px
-      padding 10px 0
+      font-size 16px
+      margin-bottom 0
+    .price 
+      font-weight bold  
+    .offer-price
+      color danger
+      padding 0
+      height auto
+      margin-bottom 0
+      font-weight bold
+    .old-price
+      text-decoration line-through  
+      height auto
+      padding 0
+      margin-bottom 0
+
   .box-footer
     text-align center
   &:hover
