--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -41,32 +41,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-3" ng-repeat="product in Home.products">
-                    <div class="box-simple">
-                        <div class="box-header">
-                            <a ui-sref="product-detail({slug:product.slug})" title="Ver más">
-                                <div class="box-bg-img"
-                                style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
-                            </a>
-                        </div>
-                        <div class="box-container">
-                            <div class="row align-items-center">
-                                <div class="col-sm-8">
-                                    <p class="box-title">{{ product.name | limitTo:40}}</p>
-                                </div>
-                                <div class="col-sm-4">
-                                    <p>{{ product.price | currency }}</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="box-footer">
-                            <div class="row">
-                                <div class="col-sm-12"> 
-                                    <a ui-sref="product-detail({slug:product.slug})" class="btn btn-block btn-white">Comprar</a>
-                                </div>
-                            </div>
-                            <!--<p class="label-danger" ng-if="product.taxonomy = '6060'"> Producto agotado</p>-->
-                        </div>
-                    </div>
+                    <ng-include src="'/templates/partials/box-product.html'"></ng-include>
                 </div>
             </div>
             <div class="title-middle-line" style="padding-top: 20px">
@@ -87,11 +62,25 @@
                     </div>
                     <div class="box-container">
                         <div class="row align-items-center">
-                            <div class="col-sm-8">
+                            <div class="col-sm-12">
                                 <p class="box-title">{{ product.name | limitTo:40}}</p>
                             </div>
-                            <div class="col-sm-4">
-                                <p>{{ product.price | currency }}</p>
+                            <div class="col-sm-12 no-padding">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm-6 no-pd-r">
+                                            <!--Offert price-->
+                                            <p class="offer-price">$200.00</p>
+                                        </div>
+                                        <div class="col-sm-6 text-right">
+                                                <!--old price-->
+                                            <p class="old-price">{{ product.price | currency }}</p>
+                                            <!--first price (price normal)
+                                            <p class="price">{{ product.price | currency }}</p>
+                                            -->
+                                        </div>
+                                    </div>    
+                                </div>
                             </div>
                         </div>
                     </div>
